--- a/package.json
+++ b/package.json
@@ -5,17 +5,38 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts"
+    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts",
+    "test": "node spec/setup.js && KUBECONFIG=.spec-kubeconfig jest -w10"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.14",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "ajv": "^6.12.5",
     "axios": "^0.20.0",
+    "jest": "^26.5.2",
+    "js-yaml": "^3.14.0",
+    "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "modulePaths": [
+      "<rootDir>/src/"
+    ],
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/spec/**/*.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/spec/setup.ts"
+    ],
+    "verbose": true,
+    "testTimeout": 60000
   }
 }
