--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ajv": "^6.12.5",
     "axios": "^0.20.0",
+    "axios-logger": "^2.4.0",
     "js-yaml": "^3.14.0"
   },
   "devDependencies": {
