--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node src/main.ts",
+    "start": "ts-node src/main.ts",
     "test": "$(node spec/setup.js) && jest -w10"
   },
   "keywords": [],
