--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "$(node spec/setup.js) && jest -w10"
+    "test": "$(node spec/setup.js) && jest -w10",
+    "eslint:fix": "eslint --fix '{src,spec}/**/*.ts'",
+    "eslint:check": "eslint '{src,spec}/**/*.ts'",
+    "prettier:fix": "prettier --write '{src,spec}/**/*.{t,j}s'",
+    "prettier:check": "prettier --check '{src,spec}/**/*.{t,j}s'"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +27,16 @@
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/ws": "^7.2.7",
-    "jest": "^26.5.3",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
+    "@typescript-eslint/typescript-estree": "^4.0.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest-extended": "^0.11.5",
+    "jest": "^26.5.3",
+    "prettier": "^2.0.4",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
