--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "ajv": "^6.12.5",
     "axios": "^0.21.0",
     "axios-logger": "^2.4.0",
+    "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.1",
     "js-yaml": "^3.14.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
+    "@types/command-line-usage": "^5.0.1",
     "@types/jest": "^26.0.15",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.7",
@@ -45,8 +49,8 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest-extended": "^0.11.5",
     "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "prettier": "^2.0.4",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
