--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ajv": "^6.12.5",
     "axios": "^0.21.0",
     "axios-logger": "^2.4.0",
+    "axios-retry": "^3.1.9",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.1",
     "js-yaml": "^3.14.0",
@@ -42,9 +43,9 @@
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.7",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.8.0",
-    "@typescript-eslint/parser": "^4.8.0",
-    "@typescript-eslint/typescript-estree": "^4.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "@typescript-eslint/typescript-estree": "^4.8.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.20.2",
