--- a/package.json
+++ b/package.json
@@ -41,21 +41,22 @@
     "@types/command-line-usage": "^5.0.1",
     "@types/jest": "^26.0.15",
     "@types/js-yaml": "^3.12.5",
-    "@types/node": "^14.14.7",
+    "@types/json-schema": "^7.0.6",
+    "@types/node": "^14.14.10",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "@typescript-eslint/typescript-estree": "^4.8.1",
-    "eslint": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "@typescript-eslint/typescript-estree": "^4.8.2",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.2.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   },
   "jest": {
     "preset": "ts-jest",
