--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "test": "$(node spec/setup.js) && jest -w10",
-    "eslint:fix": "eslint --fix '{src,spec}/**/*.ts'",
-    "eslint:check": "eslint '{src,spec}/**/*.ts'",
-    "prettier:fix": "prettier --write '{src,spec}/**/*.{t,j}s'",
-    "prettier:check": "prettier --check '{src,spec}/**/*.{t,j}s'",
+    "eslint:fix": "eslint --fix '**/*.{t,j}s'",
+    "eslint:check": "eslint  '**/*.{t,j}s'",
     "build": "tsc"
   },
   "keywords": [],
@@ -27,36 +25,29 @@
   },
   "homepage": "https://github.com/lbguilherme/kubesdk#readme",
   "dependencies": {
-    "axios": "^0.21.0",
-    "axios-logger": "^2.4.0",
+    "axios": "^0.21.1",
+    "axios-logger": "^2.5.0",
     "axios-retry": "^3.1.9",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.1",
-    "js-yaml": "^3.14.0",
-    "ws": "^7.3.1"
+    "js-yaml": "^3.14.1",
+    "ws": "^7.4.1"
   },
   "devDependencies": {
+    "@cubos/eslint-config": "^1.0.440283",
     "@types/command-line-args": "^5.0.0",
     "@types/command-line-usage": "^5.0.1",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.19",
     "@types/js-yaml": "^3.12.5",
     "@types/json-schema": "^7.0.6",
-    "@types/node": "^14.14.10",
-    "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "@typescript-eslint/typescript-estree": "^4.8.2",
-    "as-typed": "^1.0.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "@types/node": "^14.14.16",
+    "@types/ws": "^7.4.0",
+    "as-typed": "^1.1.1",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
-    "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "ts-jest",
