--- a/package.json
+++ b/package.json
@@ -25,27 +25,28 @@
   },
   "homepage": "https://github.com/lbguilherme/kubesdk#readme",
   "dependencies": {
+    "ajv": "^7.0.4",
     "axios": "^0.21.1",
     "axios-logger": "^2.5.0",
     "axios-retry": "^3.1.9",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.1",
-    "js-yaml": "^3.14.1",
-    "ws": "^7.4.1"
+    "js-yaml": "^4.0.0",
+    "ws": "^7.4.2"
   },
   "devDependencies": {
-    "@cubos/eslint-config": "^1.0.440283",
+    "@cubos/eslint-config": "^1.0.462483",
     "@types/command-line-args": "^5.0.0",
     "@types/command-line-usage": "^5.0.1",
-    "@types/jest": "^26.0.19",
-    "@types/js-yaml": "^3.12.5",
-    "@types/json-schema": "^7.0.6",
-    "@types/node": "^14.14.16",
+    "@types/jest": "^26.0.20",
+    "@types/js-yaml": "^4.0.0",
+    "@types/json-schema": "^7.0.7",
+    "@types/node": "^14.14.22",
     "@types/ws": "^7.4.0",
-    "as-typed": "^1.1.1",
+    "as-typed": "^1.1.3",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
