--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -20,6 +20,7 @@ jobs:
           '
       - run: npm run build
       - run: mv package.json dist/
+      - run: rm -r dist/spec
       - run: npm publish --tag dev
         working-directory: ./dist
         env:
