--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "$(node spec/setup.js) && jest -w10",
+    "test": "$(node spec/setup.js) && KUBESDK_TEST=1 jest -w10",
     "eslint:fix": "eslint --fix '**/*.{t,j}s'",
     "eslint:check": "eslint '**/*.{t,j}s'",
     "build": "tsc"
