--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.1",
     "js-yaml": "^4.1.0",
-    "ws": "^7.5.3"
+    "mkdirp": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "slugify": "^1.6.0",
+    "ws": "^7.5.3",
+    "zip-a-folder": "^1.1.0"
   },
   "devDependencies": {
     "@cubos/eslint-config": "^1.0.536820",
@@ -40,7 +44,9 @@
     "@types/jest": "^26.0.24",
     "@types/js-yaml": "^4.0.2",
     "@types/json-schema": "^7.0.8",
+    "@types/mkdirp": "^1.0.2",
     "@types/node": "^16.3.1",
+    "@types/rimraf": "^3.0.1",
     "@types/ws": "^7.4.6",
     "as-typed": "^1.3.0",
     "jest": "^27.0.6",
