--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Kubernetes SDK",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "ts-node src/index.ts",
     "test": "$(node spec/setup.js) && jest -w10",
     "eslint:fix": "eslint --fix '**/*.{t,j}s'",
     "eslint:check": "eslint '**/*.{t,j}s'",
@@ -24,36 +24,34 @@
   },
   "homepage": "https://github.com/cubos/kubesdk#readme",
   "dependencies": {
-    "ajv": "^8.11.0",
-    "axios": "^0.27.2",
-    "axios-logger": "^2.6.1",
-    "axios-retry": "^3.3.1",
+    "ajv": "^8.12.0",
+    "axios": "^1.4.0",
+    "axios-logger": "^2.6.2",
+    "axios-retry": "^3.5.0",
     "command-line-args": "^5.2.1",
-    "command-line-usage": "^6.1.3",
+    "command-line-usage": "^7.0.1",
     "js-yaml": "^4.1.0",
-    "mkdirp": "^1.0.4",
-    "rimraf": "^3.0.2",
-    "slugify": "^1.6.5",
-    "ws": "^8.8.1",
+    "mkdirp": "^3.0.1",
+    "rimraf": "^5.0.1",
+    "slugify": "^1.6.6",
+    "ws": "^8.13.0",
     "zip-a-folder": "^1.1.5"
   },
   "devDependencies": {
-    "@cubos/eslint-config": "^2.0.631875",
+    "@cubos/eslint-config": "^2.1.0",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
-    "@types/jest": "^29.0.3",
+    "@types/jest": "^29.5.1",
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
-    "@types/mkdirp": "^1.0.2",
-    "@types/node": "^18.7.18",
-    "@types/rimraf": "^3.0.2",
-    "@types/ws": "^8.5.3",
+    "@types/node": "^20.2.3",
+    "@types/ws": "^8.5.4",
     "as-typed": "^1.3.2",
-    "jest": "^29.0.3",
-    "jest-extended": "^3.1.0",
-    "ts-jest": "^29.0.1",
+    "jest": "^29.5.0",
+    "jest-extended": "^3.2.4",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^5.0.4"
   },
   "jest": {
     "preset": "ts-jest",
